--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,14 @@ dependencies:
   firebase_storage: ^11.5.1
   image_picker: ^1.0.4
   connectivity: ^3.0.6
+  firebase_database: ^10.4.0
+  bcrypt: ^1.1.3
+  fluttertoast: ^8.2.4
+  flutter_screenutil: ^5.9.0
+  google_fonts: ^6.1.0
+  image_picker_web: ^3.1.1
+  provider: ^6.1.1
+  shared_preferences: ^2.2.2
   
 
 dev_dependencies:
@@ -53,10 +61,13 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.1
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
+webdev:
+  assets:
+    - assets/unknown.png
 
 # The following section is specific to Flutter packages.
 flutter:
@@ -69,6 +80,7 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
    - assets/icon.png
+   - assets/unknown.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
@@ -80,11 +92,10 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
+  fonts:
+    - family: Roboto
+      fonts:
+        - asset: lib/fonts/Roboto/Roboto-Bold.ttf
   #         style: italic
   #   - family: Trajan Pro
   #     fonts:
